<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.UserProfileActivity">

    <ProgressBar
        android:id="@+id/progress_bar_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:visibility="visible"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/success_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_baseline_mood_24"
        android:visibility="gone"
        tools:visibility="visible"/>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="@dimen/dimens_16dp">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_registration_string"
        android:textSize="@dimen/dimens_42dp"
        android:textStyle="bold"
        android:textColor="@color/blues"
         />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/fio_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/fio_text_view"
            android:hint="@string/fio_user_text"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/city_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city_text_view"
            android:hint="@string/city_user_string"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/age_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/age_text_view"
            android:hint="@string/age_text_view"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/login_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_text_view"
            android:hint="@string/login_title_view"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_text_view"
            android:hint="@string/password_title_view"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_text_view"
            android:hint="@string/mail_text_view"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/enter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_title_button"
            android:textColor="@color/blues"
            app:backgroundTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/regisration_title_view"
            android:textColor="@color/blues"
            app:backgroundTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/forget_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forget_title_button"
            android:textColor="@color/blues"
            app:backgroundTint="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_title_botton_text"
            android:textColor="@color/design_default_color_error"
            app:backgroundTint="@color/white" />

    </LinearLayout>

</FrameLayout>